<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Log In</string>
    <string name="welcome_message">ProLift adalah aplikasi berbasis mobile yang membantu pengguna gym...</string>
    <string name="username_hint">Username or email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="google_icon">Google Icon</string>
    <string name="sign_up">Don’t have an account? Sign Up</string>
    <string name="profile_icon">Profile Icon</string>

</resources>